--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,8 @@ p  {
 @media (max-width: 600px) {
   object {
     display: block;
-    margin: 15px;
-    max-width: 50%;
+    margin: auto;
+    max-width: 100%;
     width: 250px;
     height: 250px;
   }
