--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ p  {
 @media (max-width: 600px) {
   object {
     display: block;
-    margin: 0 auto;
+    margin: 25px;
     max-width: 100%;
     width: 500px;
     height: 500px;
