--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 object {
-  display: inline-block;
-  object-position: 50% 50%;
+  display: block;
   width: 500px;
   height: 500px;
-  object-fit: none;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 p  {
