--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@ object {
   height: 500px;
 }
 
+background-image {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 p  {
   text-align: center;
   color: white;
@@ -15,10 +20,10 @@ p  {
 @media (max-width: 600px) {
   object {
     display: block;
-    margin: auto;
-    max-width: 100%;
-    width: 500px;
-    height: 500px;
+    margin: 15px;
+    max-width: 50%;
+    width: 250px;
+    height: 250px;
   }
 
   background-image {
@@ -39,6 +44,11 @@ p  {
     max-width: 100%;
     width: 500px;
     height: 500px;
+  }
+
+  background-image {
+    max-width: 100%;
+    max-height: 100%
   }
 
   p  {
