--- a/styles.css
+++ b/styles.css
@@ -40,10 +40,10 @@ p  {
 @media (min-width: 601px) {
   object {
     display: block;
-    margin: auto;
-    max-width: 100%;
-    width: 500px;
-    height: 500px;
+    margin: 15px;
+    max-width: 25%;
+    width: 250px;
+    height: 250px;
   }
 
   background-image {
