--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ p  {
   max-width: 100%;
 }
 
-@media (max-width: 600px) {
+@media query (max-width: 600px){
   object {
     display: block;
     margin: 15px;
@@ -37,7 +37,7 @@ p  {
   }
 }
 
-@media (min-width: 601px) {
+@media query (min-width: 601px) {
   object {
     display: block;
     margin: 75px;
