--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,10 @@ p  {
 @media query (max-width: 600px){
   object {
     display: block;
-    margin: 15px;
-    max-width: 25%;
-    width: 250px;
-    height: 250px;
+    margin: auto;
+    max-width: 100%;
+    width: 500px;
+    height: 500px;
   }
 
   background-image {
@@ -40,10 +40,10 @@ p  {
 @media query (min-width: 601px) {
   object {
     display: block;
-    margin: 75px;
+    margin: auto;
     max-width: 100%;
-    width: 250px;
-    height: 250px;
+    width: 500px;
+    height: 500px;
   }
 
   background-image {
