--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,15 @@ object {
   display: block;
   margin: auto;
   max-width: 100%;
+}
+#CD {
   width: 500px;
   height: 500px;
 }
-
+#MIDNIGHT {
+  width: 250px;
+  height: 50px;
+}
 background-image {
   max-width: 100%;
   max-height: 100%;
