--- a/sub/MIDNIGHTSOUNDS/styles.css
+++ b/sub/MIDNIGHTSOUNDS/styles.css
@@ -5,6 +5,10 @@
   text-align: center;
 }
 
+html {
+  margin:0;
+}
+
 audio {
   margin: auto;
   background-color: #1C2D43;
@@ -15,11 +19,10 @@ body {
 }
 
 background {
-  height: 100%;
-  width: 100%;
-  background-repeat: repeat;
-  margin: 0;
-  padding: 0;
+  display: block;
+  margin: auto;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 object {
@@ -37,15 +40,14 @@ p  {
   margin: auto;
 }
 
-@media only screen and (-webkit-min-device-pixel-ratio: 3) {
+@media query (max-width: 900px){
   object {
     display: block;
     margin: auto;
     max-width: 100%;
     width: 500px;
     height: 500px;
-}
-}
+  }
 
 @media query (max-width: 600px){
   object {
