--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ object {
 #CD {
   width: 500px;
   height: 500px;
+  margin-top: 100px;
 }
 
 #MIDNIGHT {
@@ -17,6 +18,7 @@ object {
 #FV1Z {
   width: 350px;
   height: 55px;
+  margin-bottom: 150px;
 }
 
 background-image {
