--- a/sub/MIDNIGHTSOUNDS/styles.css
+++ b/sub/MIDNIGHTSOUNDS/styles.css
@@ -10,6 +10,12 @@
   text-align: center;
 }
 
+html,body {
+	scroll-behavior: smooth;
+	scroll-snap-type: smooth;
+    overflow-x: hidden;
+}
+
 html {
   margin:0;
 }
